--- a/Opgave20/Opgave20.csproj
+++ b/Opgave20/Opgave20.csproj
@@ -12,7 +12,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Persons.txt">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Values.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
